logs/dhclientlist.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Werkzeug-0.9.6.egg-info'...
Listing './lib/python3.5/site-packages/dhclientlist'...
Compiling './lib/python3.5/site-packages/dhclientlist/__main__.py'...
***   File "./lib/python3.5/site-packages/dhclientlist/__main__.py", line 56
    print table.draw()
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dhclientlist/drivers'...
Listing './lib/python3.5/site-packages/dhclientlist/drivers/tp_link'...
Listing './lib/python3.5/site-packages/dhclientlist/server'...
Listing './lib/python3.5/site-packages/dhclientlist-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/charade'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Compiling './lib/python3.5/site-packages/requests/packages/urllib3/contrib/ntlmpool.py'...
***   File "./lib/python3.5/site-packages/requests/packages/urllib3/contrib/ntlmpool.py", line 38
    """
     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 130-131: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-1.2.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/texttable-0.8.1.egg-info'...
Compiling './lib/python3.5/site-packages/texttable.py'...
***   File "./lib/python3.5/site-packages/texttable.py", line 182
    raise ArraySizeError, "array should contain 4 characters"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart/firefox3-2png1txt'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart/firefox3-2pnglongtext'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart/ie6-2png1txt'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart/opera8-2png1txt'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart/webkit3-2png1txt'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/res'...
Listing './share'...
Listing './share/python-wheels'...
